# LearnOsgGL3

./: .gitignore  CMakeLists.txt  findCustomOSG.cmake  readme.md
cmake/: common.cmake  findCustomOSG.cmake
docs/a-base/: 01-01-环境搭建.md  01-02-osgSimplegl3.md  01-03-osgSimplegl3-2.md
docs/base/: 01-01-环境搭建.md
docs/d-advanced/: 01-normalVisualizer.md
docs/e-graphicAlgorithm/: 001-ReflectiveShadowMap.md
src/a-base/01-osgSimple3/: CMakeLists.txt  osgSimplegl3.cpp
src/a-base/01-osgSimple3-2/: CMakeLists.txt  osgSimplegl3-2.cpp
src/base/01-osgSimple3/: CMakeLists.txt
src/base/01-osgSimple3-2/: CMakeLists.txt  osgSimplegl3-2.cpp
src/d-advanced/01-normalVisualizer/: CMakeLists.txt  normal.geom  normalVisualizer.cpp
src/e-graphicAlgorithm/001_ReflectiveShadowMap/: CMakeLists.txt  GBufferPass.cpp  GBufferPass.frag  GBufferPass.h  GBufferPass.vert  RSMBufferPass.frag  RSMBufferPass.vert  ScreenQuadPass.frag  ScreenQuadPass.vert  ShadingWithRSMPass.glsl  common.h  main.cpp  readme.md
src/e-graphicAlgorithm/DepthToPositionAndNormal/: CMakeLists.txt  DepthPass.cpp  DepthPass.h  ReConstructPass.cpp  ReConstructPass.frag  ReConstructPass.h  main.cpp
src/e-graphicAlgorithm/EffectCompositor/: CMakeLists.txt  DispatchComputeWithBarrier.cpp  DispatchComputeWithBarrier.h  EffectCompositor  EffectCompositor.cpp  EffectCompositor.h  EffectCompositorXML.cpp  EffectCompositor_export.h  Export.h  GLMarker.cpp  GLMarker.h
src/e-graphicAlgorithm/EffectCompositor/GraphicsPipeline/: CustomPipeline.cpp  CustomPipeline.h  GraphicsPassCullback.cpp  GraphicsPipePass.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineStage.cpp  GraphicsPipelineStage.h  GraphicsPipelineStageCallback.cpp  GraphicsPipelineStageCallback.h  GraphicsPiplelineEventCallback.cpp  GraphicsPiplelineEventCallback.h  RenderPass.cpp  RenderPass.h  RenderPassCullback.cpp  RenderPassCullback.h  RenderStage.cpp  RenderStage.h  RenderStageCallback.cpp  RenderStageCallback.h
src/e-graphicAlgorithm/Frame/: CMakeLists.txt  FirstPersonMainipulator.cpp  FirstPersonMainipulator.h  Frame.cpp  Frame.h  app.cpp  app.h  utils.cpp  utils.h
src/e-graphicAlgorithm/WindFiled/: CMakeLists.txt  GBufferPass.frag  RSMBufferPass.frag  RSMBufferPass.vert  WindFiled.cpp  WindFiled.h  main.cpp  readme.md
src/f-GPUPro1/001_postmortems/: CMakeLists.txt  ScreenQuadPass.frag  ScreenQuadPass.vert  main.cpp
src/osgTest/: CMakeLists.txt  main.cpp
src/sim/02-clip/: 02-clip.cpp  CMakeLists.txt
